# SGR-Kernel

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  KERNEL_SPEC.md  LICENSE  README.md  RELEASE.md  SKILL_DEVELOPMENT.md  chainlit.md  docker-compose.chaos.yml  docker-compose.dev.yml  docker-compose.yml  fixer.py  foreign_mock.db  local_mock.db  main.py  manifest_template.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  ruff_errors.json  run_evals.py  run_worker.py  server.py  ui_app.py
.github/workflows/: ci.yml  deploy-site.yml  main.yml
.hypothesis/constants/: 0036c3f9aeac6cb9  004e722d2b39195a  0053b40976e936fc  005be612047aa41d  006b559781a41f7f  006d29edf1dcd5e3  0083f0010fcc258a  009f0116eab76fe1  009f7a1122aa4f57  (+3135 more)
alembic/: env.py
config/: fluent-bit.conf  prometheus.yml
core/: agent.py  artifacts.py  audit_logger.py  chaos.py  checkpoints.py  circuit_breaker.py  container.py  critic.py  database.py  decision.py  dispatcher.py  distributed_lock.py  docker_mcp_client.py  event_bus.py  event_store.py  events.py  governance.py  llm.py  logger.py  logging_config.py  mcp_client.py  memory.py  memory_manager.py  metrics.py  middleware.py  models.py  orchestrator.py  pii_classifier.py  planner.py  policy.py  policy_graph.py  quota.py  reconciler.py  registry.py  reliability.py  repair.py  replay.py  result.py  router.py  runtime.py  (+16 more)
docs/: FIRST_RUN.md  INTEGRATION_AI_ML_PLAYBOOK.md  INTEGRATION_PEFT_PLATFORM.md  L8_ARCHITECTURE_ANNEX.md  MIGRATION_V2.md  RFC_SGR_KERNEL_L8.md  RFC_SGR_KERNEL_V3.md  architecture.md  deployment.md  design_decisions.md  evaluation_loop.md  execution_model.md  l8_distinguished_invariants.md  migration_v3.md  soul.md  swarm_protocol.md  system_design_story.md  system_overview.md  telemetry.md  why_sgr.en.md  why_sgr.md
evals/: runner.py  slices.py
examples/: 01_compliance_bot.py  02_cost_aware_agent.py  03_ha_blue_green.py  demo_swarm.py  minimal.py  skill_minimal.py
interfaces/: telegram_bot.py
proxy/: main.py
scripts/: bulk_rename_sgr.py  fix_dicts.py  fix_lint.py  fix_types.py  generate_docs.py  generate_safety_cases.py  generate_sbom.ps1  lang_splitter.py  migrate_to_scar.py  quickstart.ps1  refactor_skills.py  revert_tests.py  run_load_test.ps1  verify_quality.py
skills/: base.py  handoff.py  loader.py  mcp_adapter.py
specifications/: EconomicBudgeting.tla  LeaseProtocol.cfg  LeaseProtocol.tla  LeaseProtocol_TTrace_1772734966.tla  LeaseProtocol_TTrace_1772734983.tla  LeaseProtocol_TTrace_1772734999.tla  LeaseProtocol_TTrace_1772735032.tla  LeaseProtocol_TTrace_1772735047.tla  LeaseProtocol_TTrace_1772735063.tla  ModelHandoff.tla  S3CommitProtocol.cfg  S3CommitProtocol.tla  S3CommitProtocol_TTrace_1772735193.tla  S3CommitProtocol_TTrace_1772735215.tla  S3CommitProtocol_TTrace_1772739630.tla  SchedulerReconciler.cfg  SchedulerReconciler.tla  SwarmLivelock.cfg  SwarmLivelock.tla  download_tools.sh
tests/: conftest.py  legacy_test_sgr.py  smoke_test_v2.py  test_agent.py  test_bca.py  test_causal_analyzer.py  test_compliance.py  test_distributed.py  test_economics.py  test_engine_init.py  test_event_determinism.py  test_event_store.py  test_federated.py  test_human_loop.py  test_memory_conflict.py  test_memory_decay.py  test_memory_manager.py  test_model_router.py  test_output_spec.py  test_parallelism.py  test_race_safety.py  test_rag_optimization.py  test_replay_fork.py  test_replay_recon.py  test_skills_refactor.py  test_skills_v2.py  test_structured_output.py  test_telemetry.py  test_tier_routing.py  test_tla_parser.py  test_trace_metrics.py  verify_architecture.py  verify_capabilities.py  verify_core_model.py  verify_crash_recovery.py  verify_governance.py  verify_replay.py  verify_rfc_v2.py
workers/: peftlab_worker.py
(+739 files in other folders)
